--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -19,7 +20,7 @@
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "immer": "^9.0.12",
-    "jscodeshift": "0.11.0",
+    "monaco-editor": "0.21.2",
     "localforage": "^1.10.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
